--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
         <div class="inner-container">
             <div class="img-container"></div>
             <h1>Older Summary</h1>
-            <p></p>
+            <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
             <div class="music-card-container">
                 <div class="music-icon"></div>
-                <h2>Annual Plan</h2>
-                <p>$59.99/year</p>
+                <div class="price-plan">
+                    <h3>Annual Plan</h3>
+                    <p>$59.99/year</p>
+                </div>
                 <a href="">Change</a>
             </div>
             <div class="payment-button">
-                <h2>Proceed to Payment</h2>
+                <h3>Proceed to Payment</h3>
             </div>
-            <p>Cancel Order</p>
+            <div class="cancel-button">
+                <p>Cancel Order</p>
+            </div>
         </div>
     </div>
 </body>
