--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="">Change</a>
             </div>
             <div class="payment-button">
-                <h3>Proceed to Payment</h3>
+                <a href="#">Proceed to Payment</a>
             </div>
             <div class="cancel-button">
                 <p>Cancel Order</p>
